force-app/main/default/objects/Lead/fields/RW_Configuration__c.field-meta.xml
<CustomField>
    <fullName>RW_Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>1.5 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>3.5 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Commercial/ Office</fullName>
            </value>
            <value>
                <fullName>Avenue</fullName>
            </value>
            <value>
                <fullName>1BHK</fullName>
                <label>1bhk</label>
            </value>
            <value>
                <fullName>2BHK</fullName>
                <label>2bhk</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial Office Space (Small)</fullName>
            </value>
            <value>
                <fullName>Commercial Office Space (Large)</fullName>
            </value>
            <value>
                <fullName>Retail (Small)</fullName>
            </value>
            <value>
                <fullName>Retail (Large)</fullName>
            </value>
            <value>
                <fullName>4 BHK or Duplex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>