force-app/main/default/objects/Lead/fields/RW_Corporate_Web_To_Lead__c.field-meta.xml
<CustomField>
    <fullName>RW_Corporate_Web_To_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Web To Lead</label>
    <type>Checkbox</type>
</CustomField>