force-app/main/default/objects/Lead/fields/RW_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>RW_Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>North Indian Hindu</fullName>
            </value>
            <value>
                <fullName>South Indian Hindu</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
            <value>
                <fullName>Marwari</fullName>
            </value>
            <value>
                <fullName>Gujrati</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>North-Indian Hindu</fullName>
            </value>
            <value>
                <fullName>South-Indian Hindu</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
            <value>
                <fullName>Sindhi</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Parsi</fullName>
            </value>
            <value>
                <fullName>Oriya</fullName>
            </value>
            <value>
                <fullName>Jain</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>