force-app/main/default/objects/Lead/fields/RW_Existing_Corporate_Tie_Up__c.field-meta.xml
<CustomField>
    <fullName>RW_Existing_Corporate_Tie_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Corporate Tie Up</label>
    <type>Checkbox</type>
</CustomField>