force-app/main/default/objects/Lead/fields/RW_Family_Structure__c.field-meta.xml
<CustomField>
    <fullName>RW_Family_Structure__c</fullName>
    <label>Family Structure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
            <value>
                <fullName>Son/s</fullName>
            </value>
            <value>
                <fullName>Daughter/s</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>