force-app/main/default/objects/Lead/fields/RW_First_SV_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_First_SV_Date__c</fullName>
    <label>First SV Date</label>
    <type>Date</type>
</CustomField>