force-app/main/default/objects/Lead/fields/RW_Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>RW_Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>AdgebraNative</fullName>
            </value>
            <value>
                <fullName>Airoli - koparkhairane</fullName>
            </value>
            <value>
                <fullName>Airtory</fullName>
            </value>
            <value>
                <fullName>Alternate Channel Partner</fullName>
            </value>
            <value>
                <fullName>BING</fullName>
            </value>
            <value>
                <fullName>BKC</fullName>
            </value>
            <value>
                <fullName>Bombay Times</fullName>
            </value>
            <value>
                <fullName>Brightroll</fullName>
            </value>
            <value>
                <fullName>Business Today</fullName>
            </value>
            <value>
                <fullName>Call Us Widget</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Chembur – Wadala</fullName>
            </value>
            <value>
                <fullName>Churchgate – Worli</fullName>
            </value>
            <value>
                <fullName>click.in</fullName>
            </value>
            <value>
                <fullName>Click India</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Collateral 1</fullName>
            </value>
            <value>
                <fullName>Collateral 2</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>Colombia_NRI</fullName>
            </value>
            <value>
                <fullName>Commonfloor</fullName>
            </value>
            <value>
                <fullName>Daily_hunt</fullName>
            </value>
            <value>
                <fullName>DBM</fullName>
            </value>
            <value>
                <fullName>DBM_Display</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>Dubai-NRI-event</fullName>
            </value>
            <value>
                <fullName>Economic Times</fullName>
            </value>
            <value>
                <fullName>EDM / Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>