force-app/main/default/objects/Lead/fields/RW_Lead_through_CTI__c.field-meta.xml
<CustomField>
    <fullName>RW_Lead_through_CTI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead through CTI</label>
    <type>Checkbox</type>
</CustomField>