force-app/main/default/objects/Lead/fields/RW_Lead_through_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Lead_through_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead through Email</label>
    <type>Checkbox</type>
</CustomField>