force-app/main/default/objects/Lead/fields/RW_Location__c.field-meta.xml
<CustomField>
    <fullName>RW_Location__c</fullName>
    <label>Preferred Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airoli</fullName>
            </value>
            <value>
                <fullName>Ambernath</fullName>
            </value>
            <value>
                <fullName>Andheri</fullName>
            </value>
            <value>
                <fullName>Antop Hill</fullName>
            </value>
            <value>
                <fullName>Badlapur</fullName>
                <label>BADLAPUR</label>
            </value>
            <value>
                <fullName>Bandra</fullName>
            </value>
            <value>
                <fullName>Bhandup</fullName>
            </value>
            <value>
                <fullName>Borivali</fullName>
            </value>
            <value>
                <fullName>Byculla</fullName>
            </value>
            <value>
                <fullName>CBD Belapur</fullName>
            </value>
            <value>
                <fullName>Chembur</fullName>
            </value>
            <value>
                <fullName>Churchagte</fullName>
            </value>
            <value>
                <fullName>Colaba</fullName>
            </value>
            <value>
                <fullName>Cuffe Parade</fullName>
            </value>
            <value>
                <fullName>Dadar</fullName>
            </value>
            <value>
                <fullName>Dahisar</fullName>
            </value>
            <value>
                <fullName>Dombivali</fullName>
            </value>
            <value>
                <fullName>Fort</fullName>
            </value>
            <value>
                <fullName>Ghansoli</fullName>
            </value>
            <value>
                <fullName>Ghatkopar</fullName>
            </value>
            <value>
                <fullName>Goregaon</fullName>
            </value>
            <value>
                <fullName>Govandi</fullName>
            </value>
            <value>
                <fullName>Jogeshwari</fullName>
            </value>
            <value>
                <fullName>Juhu</fullName>
            </value>
            <value>
                <fullName>Juinagar</fullName>
            </value>
            <value>
                <fullName>Kalamboli</fullName>
            </value>
            <value>
                <fullName>Kalbadevi</fullName>
            </value>
            <value>
                <fullName>Kalyan</fullName>
                <label>KALYAN</label>
            </value>
            <value>
                <fullName>Kamothe</fullName>
            </value>
            <value>
                <fullName>Kandivali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>