force-app/main/default/objects/Lead/fields/RW_Mobile_No_copy__c.field-meta.xml
<CustomField>
    <fullName>RW_Mobile_No_copy__c</fullName>
    <formula>RW_Mobile_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile No copy</label>
    <type>Text</type>
</CustomField>