force-app/main/default/objects/Lead/fields/RW_Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>RW_Number_of_Tasks__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>