force-app/main/default/objects/Lead/fields/RW_Others__c.field-meta.xml
<CustomField>
    <fullName>RW_Others__c</fullName>
    <label>Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>