force-app/main/default/objects/Lead/fields/RW_Reference_Source__c.field-meta.xml
<CustomField>
    <fullName>RW_Reference_Source__c</fullName>
    <label>Reference Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Management Reference</fullName>
            </value>
            <value>
                <fullName>Employee Reference</fullName>
            </value>
            <value>
                <fullName>Existing Customer Reference</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>