force-app/main/default/objects/Lead/fields/RW_Referral_Details__c.field-meta.xml
<CustomField>
    <fullName>RW_Referral_Details__c</fullName>
    <label>Referral Details</label>
    <type>TextArea</type>
</CustomField>