force-app/main/default/objects/Lead/fields/RW_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Secondary_Email__c</fullName>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>