force-app/main/default/objects/Lead/fields/RW_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>RW_Sourcing_Manager__c</fullName>
    <label>Sourcing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Aakash Rajesh Tripathi</fullName>
            </value>
            <value>
                <fullName>A Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>A Adarsh Pandey</fullName>
            </value>
            <value>
                <fullName>Aakash Chavan</fullName>
            </value>
            <value>
                <fullName>A Akash Malik</fullName>
            </value>
            <value>
                <fullName>A Amit Sachde</fullName>
            </value>
            <value>
                <fullName>A Anam Khan</fullName>
            </value>
            <value>
                <fullName>Aashima Shaikh</fullName>
            </value>
            <value>
                <fullName>Aashima Sheikh</fullName>
            </value>
            <value>
                <fullName>A Ashish Bodwani</fullName>
            </value>
            <value>
                <fullName>A Ashish Pal</fullName>
            </value>
            <value>
                <fullName>A Ashok Rathod</fullName>
            </value>
            <value>
                <fullName>A Asim Master</fullName>
            </value>
            <value>
                <fullName>Abdullah Hafiz</fullName>
            </value>
            <value>
                <fullName>Abhay Ghogare</fullName>
            </value>
            <value>
                <fullName>Abhijeet Pawar</fullName>
            </value>
            <value>
                <fullName>Abhijit Karande</fullName>
            </value>
            <value>
                <fullName>Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>Abhiram Kuchibhatla</fullName>
            </value>
            <value>
                <fullName>Abhishek Dash</fullName>
            </value>
            <value>
                <fullName>Abhishek Gowda</fullName>
            </value>
            <value>
                <fullName>Abhishek Kalelkar</fullName>
            </value>
            <value>
                <fullName>Abhishek Parmar</fullName>
            </value>
            <value>
                <fullName>Abhishek Sonawane</fullName>
            </value>
            <value>
                <fullName>Abhishek Varma</fullName>
            </value>
            <value>
                <fullName>A Bushra Shaikh</fullName>
            </value>
            <value>
                <fullName>Adarsh Vyas</fullName>
            </value>
            <value>
                <fullName>A Deepak Dubey</fullName>
            </value>
            <value>
                <fullName>A Dikshant Wankhede</fullName>
            </value>
            <value>
                <fullName>Aditi Dubey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>