force-app/main/default/objects/Lead/fields/RW_Time_line__c.field-meta.xml
<CustomField>
    <fullName>RW_Time_line__c</fullName>
    <label>Time line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready Possession</fullName>
            </value>
            <value>
                <fullName>Near to Possession</fullName>
            </value>
            <value>
                <fullName>1 to 2 year</fullName>
            </value>
            <value>
                <fullName>2 to 3 years</fullName>
            </value>
            <value>
                <fullName>More than 3 years</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
            <value>
                <fullName>UC 2 - 3 Years</fullName>
            </value>
            <value>
                <fullName>RTMI</fullName>
            </value>
            <value>
                <fullName>RTMI and UC</fullName>
            </value>
            <value>
                <fullName>UC &lt; 2 Years</fullName>
            </value>
            <value>
                <fullName>UC 2-4 Years</fullName>
            </value>
            <value>
                <fullName>UC &gt; 4 Years</fullName>
            </value>
            <value>
                <fullName>UC 6 months - 1.5 Years</fullName>
            </value>
            <value>
                <fullName>UC</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2031</fullName>
            </value>
            <value>
                <fullName>2032</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>