force-app/main/default/objects/Lead/fields/RW_To_Account_Convert__c.field-meta.xml
<CustomField>
    <fullName>RW_To_Account_Convert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Account Convert</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (To Account Convert)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>