force-app/main/default/objects/Lead/fields/RW_Type_of_Client__c.field-meta.xml
<CustomField>
    <fullName>RW_Type_of_Client__c</fullName>
    <label>Type of Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>