force-app/main/default/objects/Lead/fields/RW_Unique_Lead__c.field-meta.xml
<CustomField>
    <fullName>RW_Unique_Lead__c</fullName>
    <label>Unique Lead</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>