force-app/main/default/objects/Lead/fields/RW_Vastu_Entry_Towards__c.field-meta.xml
<CustomField>
    <fullName>RW_Vastu_Entry_Towards__c</fullName>
    <label>Vastu (Entry Towards)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>