force-app/main/default/objects/Lead/fields/RW_WhatsApp_Sent_to_DigitalLead__c.field-meta.xml
<CustomField>
    <fullName>RW_WhatsApp_Sent_to_DigitalLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp Sent to DigitalLead</label>
    <type>Checkbox</type>
</CustomField>