force-app/main/default/objects/Lead/fields/RW_With_Servant_Room__c.field-meta.xml
<CustomField>
    <fullName>RW_With_Servant_Room__c</fullName>
    <label>Landing Page</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>