force-app/main/default/objects/Lead/fields/Sales_Call_Attempted_By__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Attempted_By__c</fullName>
    <label>Last Sales Call Attempted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>