force-app/main/default/objects/Lead/fields/Sales_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Count__c</fullName>
    <label>Sales Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>