force-app/main/default/objects/Lead/fields/Sales_Call_Follow_Up_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Follow_Up_Ageing__c</fullName>
    <formula>Sales_Next_Action_Date__c - Sales_Call_Attempt_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Call Follow Up Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>