force-app/main/default/objects/Lead/fields/Sales_Team_Calling_status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Calling_status__c</fullName>
    <label>Sales Team - Calling status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked somewhere else</fullName>
            </value>
            <value>
                <fullName>Budget mismatch</fullName>
            </value>
            <value>
                <fullName>Call not answered</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Number not in service</fullName>
            </value>
            <value>
                <fullName>Plan dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>