force-app/main/default/objects/Lead/fields/Second_Connected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Second_Connected_Date_Time__c</fullName>
    <label>Second Connected Date/Time</label>
    <type>DateTime</type>
</CustomField>