force-app/main/default/objects/Lead/fields/Secondary_Email1__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email1__c</fullName>
    <label>Secondary Email1</label>
    <type>Email</type>
</CustomField>