force-app/main/default/objects/Lead/fields/Secondary_Mobile_No_1__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_No_1__c</fullName>
    <label>Secondary Mobile No.1</label>
    <type>Phone</type>
</CustomField>