force-app/main/default/objects/Lead/fields/Secondary_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_No__c</fullName>
    <formula>(&quot;XXXXX&quot;&amp;right(RW_Secondary_Mobile_No__c,5))</formula>
    <label>Secondary Mobile No</label>
    <type>Text</type>
</CustomField>